--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -27,7 +27,7 @@ args=(sys.stdout,)
 class=logging.handlers.RotatingFileHandler
 level=DEBUG
 formatter=tianchiFormatter
-args=('log/tianchi.log', 'a', 20000, 3)
+args=('log/tianchi.log', 'a', 20*(10**6), 1)
 
 [formatter_tianchiFormatter]
 format=[%(asctime)s] [%(filename)s:%(lineno)d] %(levelname)s %(message)s
